[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/textures/prompt/Ctrl-Key.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/prompt/A-Key.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/prompt/Space-Key.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/prompt/D-Key.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/prompt/S-Key.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/prompt/W-Key.png" type="Texture" id=6]
[ext_resource path="res://script/prompt.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "CTRL",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=16]
radius = 56.5685

[sub_resource type="CircleShape2D" id=17]
radius = 96.0

[sub_resource type="CircleShape2D" id=18]
radius = 48.0

[sub_resource type="CircleShape2D" id=19]
radius = 40.0

[sub_resource type="CircleShape2D" id=23]
radius = 77.0584

[node name="Prompts" type="Node2D"]
script = ExtResource( 7 )

[node name="PROMPTS" type="Node2D" parent="."]

[node name="A_LEFT" type="AnimatedSprite" parent="PROMPTS"]
position = Vector2( 72, 224 )
frames = SubResource( 3 )
frame = 1
speed_scale = 0.25
playing = true

[node name="SPACE" type="AnimatedSprite" parent="PROMPTS"]
position = Vector2( 440, 224 )
frames = SubResource( 6 )
frame = 1
speed_scale = 0.25
playing = true

[node name="S_DOWN" type="AnimatedSprite" parent="PROMPTS"]
position = Vector2( 552, 216 )
frames = SubResource( 9 )
frame = 1
speed_scale = 0.25
playing = true

[node name="W_UP" type="AnimatedSprite" parent="PROMPTS"]
position = Vector2( 240, 248 )
frames = SubResource( 12 )
speed_scale = 0.25
playing = true

[node name="D_RIGHT" type="AnimatedSprite" parent="PROMPTS"]
position = Vector2( 112, 224 )
frames = SubResource( 15 )
speed_scale = 0.25
playing = true

[node name="CTRL" type="AnimatedSprite" parent="PROMPTS"]
position = Vector2( 953, 344 )
frames = SubResource( 22 )
animation = "CTRL"
frame = 1
speed_scale = 0.25
playing = true

[node name="AREA2D" type="Node2D" parent="."]

[node name="Area_A_D" type="Area2D" parent="AREA2D"]

[node name="Collision_A_D" type="CollisionShape2D" parent="AREA2D/Area_A_D"]
position = Vector2( 96, 288 )
shape = SubResource( 16 )

[node name="Area_W" type="Area2D" parent="AREA2D"]

[node name="Collision_W" type="CollisionShape2D" parent="AREA2D/Area_W"]
position = Vector2( 224, 280 )
shape = SubResource( 17 )

[node name="Area_SPACE" type="Area2D" parent="AREA2D"]

[node name="Collision_SPACE" type="CollisionShape2D" parent="AREA2D/Area_SPACE"]
position = Vector2( 424, 264 )
shape = SubResource( 18 )

[node name="Area_S" type="Area2D" parent="AREA2D"]

[node name="collision_S" type="CollisionShape2D" parent="AREA2D/Area_S"]
position = Vector2( 544, 232 )
shape = SubResource( 19 )

[node name="Area_CTRL" type="Area2D" parent="AREA2D"]

[node name="Collision_CTRL" type="CollisionShape2D" parent="AREA2D/Area_CTRL"]
position = Vector2( 953, 371 )
shape = SubResource( 23 )

[connection signal="body_entered" from="AREA2D/Area_A_D" to="." method="_on_Area_A_D_body_entered"]
[connection signal="body_exited" from="AREA2D/Area_A_D" to="." method="_on_Area_A_D_body_exited"]
[connection signal="body_entered" from="AREA2D/Area_W" to="." method="_on_Area_W_body_entered"]
[connection signal="body_exited" from="AREA2D/Area_W" to="." method="_on_Area_W_body_exited"]
[connection signal="body_entered" from="AREA2D/Area_SPACE" to="." method="_on_Area_SPACE_body_entered"]
[connection signal="body_exited" from="AREA2D/Area_SPACE" to="." method="_on_Area_SPACE_body_exited"]
[connection signal="body_entered" from="AREA2D/Area_S" to="." method="_on_Area_S_body_entered"]
[connection signal="body_exited" from="AREA2D/Area_S" to="." method="_on_Area_S_body_exited"]
